auto-stop/aws/ecs/sample-ecs-ec2-cluster-setup/security_group.tf
resource "aws_security_group" "ecs" {
  name        = "${var.cluster_name}-ecs-sg"
  description = "ECS EC2 instances security group"
  vpc_id      = var.vpc_id

  ingress {
    description = "SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.ssh_ingress_cidr
  }

  ingress {
    description = "HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = var.http_ingress_cidr
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name     = "${var.cluster_name}-sg"
    Schedule = var.schedule_tag
  }
}
